workspace = { members = ["p2p"] }
[package]
name = "raft-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcd-client = "0.12.4"
libp2p = { version = "0.53.2", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
p2p = { version = "0.1.0", path = "p2p" }
