[package]
name = "raft-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
libp2p = { version = "0.53.2", features = ["kad", "noise", "tcp", "yamux", "request-response", "cbor", "tokio"] }
libp2p-identity = "0.2.8"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.3", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
