[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
futures = "0.3.30"
futures-timer = "3.0.3"
void = "1.0.2"
instant = "0.1.12"
rand = "0.9.0-alpha.0"
async-std = "1.12.0"
libp2p = { version = "0.53.2", features = ["full"] }
libp2p-core = "0.41.2"
libp2p-identity = { version = "0.2.8", features = ["peerid"] }
libp2p-swarm = "0.44.1"
